FIX animation glitch on iOS

--- a/src/auth/Login.css
+++ b/src/auth/Login.css
@@ -23,6 +23,7 @@
   }
   100% {
     opacity: 1;
+    transform: translateY(0px);
   }
 }
 .login-header {
